implementa capa de persistencia jpa y seeders para integrador 2